--- a/FTWeb/View_Mobile/UI/UI_QYWD_LISTN.html
+++ b/FTWeb/View_Mobile/UI/UI_QYWD_LISTN.html
@@ -871,7 +871,7 @@
             },
             viewwxx: function () {
                 if (model.selWJ.size() != 1) {
-                    $.toast("请选择一个文件！");
+                    ComFunJS.winwarning("请选择一个文件！");
                     return;
                 }
                 if (ComFunJS.xstp(model.selWJ[0].FileExtendName)) {
@@ -885,7 +885,7 @@
 
             }, DownLoadFile: function () {
                 if (model.selWJ.size() != 1) {
-                    $.toast("请选择一个文件！");
+                    ComFunJS.winwarning("请选择一个文件！");
                     return;
                 }
                 window.location = '/ViewV5/Base/DownFile.aspx?MD5=' + model.selWJ[0].FileMD5;
@@ -920,7 +920,7 @@
                     $("#file").trigger("click");
                 }
                 else {
-                    $.toast("您没有上传权限！");
+                    ComFunJS.winwarning("您没有上传权限！");
                 }
             }, hideheader: function () {
                 $(".click-show").hide();
@@ -931,7 +931,7 @@
 
             }, DelFile: function () {
                 if (model.selWJ.size() == 0) {
-                    comFunJS.winwarning("请选择要删除的文件");
+                    ComFunJS.winwarning("请选择要删除的文件");
                     return;
                 }
                 var delmodel = model.selWJ.$model;
@@ -981,10 +981,8 @@
         });
 
         function loadMore() {
-            $.showPreloader();
-
             $.getJSON("/API/WXAPI.ashx?Action=QYWD_GETLISTDATA&r=" + Math.random(), { P1: strId == "0" ? "" : strId, itemtype: strType }, function (r) {
-                $.hidePreloader();
+
                 if (r.ErrorMsg == "") {
                     r.Result.forEach(function (item) {
                         item.type = "wjj";
@@ -1042,7 +1040,6 @@
         function UploadLoad() {
             var str = strId;
             if (document.getElementById("file").files.length > 0) {
-                $.showPreloader("上传中");
                 var formData = new FormData();
                 formData.append("upFile", document.getElementById("file").files[0]);
                 $.ajax({
@@ -1059,7 +1056,6 @@
                     */
                     processData: false,
                     success: function (result) {
-                        $.hidePreloader();
                         var r = $.parseJSON(result);
                         if (r.ErrorMsg == "") {
                             document.getElementById("file").outerHTML = document.getElementById("file").outerHTML;
@@ -1073,10 +1069,7 @@
                                 })
                                 model.wjData.push(r.Result[0]);
                             }
-                            $.toast("上传成功！");
-                        }
-                        else {
-                            $.toast("上传失败！");
+                            ComFunJS.winsuccess("上传成功！");
                         }
                     }
                 });
