--- a/FTWeb/View_Mobile/UI/UI_LCSP_LCLIST.html
+++ b/FTWeb/View_Mobile/UI/UI_LCSP_LCLIST.html
@@ -61,10 +61,7 @@
             }
         });
         avalon.ready(function () {
-            $.showPreloader();
-            $.post("/API/WXAPI.ashx?Action=LCSP_GETWFPDLIST&r=" + Math.random(), { "P1": "1" }, function (data) {
-                $.hidePreloader();
-                var data = $.parseJSON(data);
+            $.getJSON("/API/WXAPI.ashx?Action=LCSP_GETWFPDLIST&r=" + Math.random(), { "P1": "1" }, function (data) {
                 if (data.ErrorMsg == "") {
                     model.ctData = data.Result;
                     if (data.Result.length == 0)
@@ -72,14 +69,6 @@
                         model.issj = '0';
                     }
                 }
-                else {
-                    $.tips({
-                        content: "流程类型加载失败",
-                        stayTime: 2000,
-                        type: "warn"
-                    })
-                }
-
             });
         })
         function back() {
