--- a/FTWeb/View_Mobile/UI/UI_RWGL_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_RWGL_LIST.html
@@ -326,15 +326,11 @@
             },//文件查看方法
             pl: function (el) {
                 ComFunJS.showCommentNew(function (result) {
-                    $.showPreloader("保存中");
                     $.getJSON('/API/WXAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "RWGL", "MsgLYID": el.ID }, function (resultData) {
-                        $.hidePreloader();
+
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
-                            $.toast("跟进成功");
-                        }
-                        else {
-                            $.toast("跟进失败");
+                            ComFunJS.winsuccess("跟进成功");
                         }
                     })
 
