--- a/FTWeb/ViewV5/AppPage/KCGL/KCGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/KCGL/KCGLLIST.html
@@ -30,7 +30,8 @@
         <table class="table table-striped table-responsive table-hover">
             <thead>
                 <tr>
-                    <th class="tc">
+                    <th class="tc">序号</th>
+                    <th>
                         专业分类
                     </th>
                     <th>培训课程名称</th>
@@ -41,6 +42,9 @@
             </thead>
             <tbody>
                 <tr ms-repeat-el="ListData">
+                    <td class="tc">
+                        {{$index+1+page.pagecount*(page.pageindex-1)}}
+                    </td>
                     <td>{{el.TypeName}}</td>
                     <td>{{el.KCName}}</td> 
                     <td>{{el.KCZJR}}</td>
@@ -98,7 +102,7 @@
 
         },
         SelectType: function (type) {
-            model.search.seartype = type;
+            tempindex.kcflType = type;
             tempindex.GetLIST();
         },
         GetLIST: function () {
