--- a/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
@@ -53,10 +53,10 @@
                     <td>{{el.CRDate|date('yyyy-MM-dd')}}</td>
                     <td>
                         <span class="btn-click">
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="AddView('KSGL_TKGL','题库编辑',el.ID,$event)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑"   ms-click="AddView('KSGL_TKGL','题库编辑',el.ID,$event)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
-                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName" ms-click="DeleteView(el,$event)">
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除"   ms-click="DeleteView(el,$event)">
                                 <i class="iconfont icon-shanchu"></i>
                             </a>
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="试题管理" ms-click="ChangeMenu(el)">
