--- a/FTWeb/ViewV5/AppPage/KSGL/USERCJLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/USERCJLIST.html
@@ -1,11 +1,8 @@
-﻿<div ms-controller="W_KSUSERGL" class="nav-right" style="margin-left: 0">
-    <ul class="list-top clearfix">
-        <li class="list-tit" ms-class-1="active:search.seartype==1">
-            考试人员
-        </li>
-    </ul>
-    <div class="right-box">
-        <table class="ui-datatable table-hover table-responsive table-striped">
+﻿<div ms-controller="W_KSUSERGL">
+   
+    <!-- 表格 -->
+    <div class="default-tab ft14 pt20 hover-btn">
+        <table class="table table-striped table-responsive table-hover">
             <thead>
                 <tr>
                     <th style="text-align: center">&nbsp;</th>
@@ -16,11 +13,11 @@
                     <th>阅卷老师</th>
                     <th style="width: 40px" ms-visible="stu!=1">
                         操作
-                    <th>
+                    </th>
                 </tr>
             </thead>
             <tbody>
-                <tr ms-repeat-item="CommonData">
+                <tr ms-repeat-item="ListData">
                     <td class="text-center">&nbsp;</td>
                     <td>{{ComFunJS.convertuser(item.CRUser)}}</td>
                     <td>{{item.Record}}</td>
@@ -28,7 +25,7 @@
                     <td>{{item.ISJJ==1?"是":"否"}}</td>
                     <td>{{ComFunJS.convertuser(item.YJTeacher)}}</td>
                     <td ms-visible="stu!=1">
-                        <button type="button" class="btn btn-default btn-sm btn-tm btn-rid0" ms-click="DFView(item.KSAPID,item.CRUser)" ms-if="stu!=1"><i class="fa fa-edit"></i>阅卷打分</button>
+                        <button type="button" class="btn btn-default btn-sm btn-tm btn-rid0" ms-click="DFView(tempindex.KSAPID,item.CRUser)" ms-if="stu!=1">阅卷打分</button>
                     </td>
                 </tr>
             </tbody>
@@ -44,26 +41,27 @@
             tempindex.stu = data.stu;
             tempindex.GetLIST();
         },
-        KSAPID:"",
+        KSAPID: "",
         stu: "",
         GetLIST: function () {
-            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: tempindex.page, P1: tempindex.KSAPID, Content: model.search.SearchContent }, function (resultData) {
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: 1, pagecount: model.page.pagecount, P1: tempindex.KSAPID, Content: model.search.SearchContent }, function (resultData) {
                 if (resultData.ErrorMsg == "") {
-                    model.CommonData = resultData.Result;
-                    model.Total = resultData.Result1;
+                    model.ListData = resultData.Result;
+                    if (model.ListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
+                    model.page.total = resultData.Result1;
                     laypage({
                         cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
                         pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / 8), //通过后台拿到的总页数
                         curr: 1, //初始化当前页
                         skin: 'molv',
                         jump: function (e) { //触发分页后的回调
-                            if (e.curr != model.page) {
-                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: e.curr, P1: tempindex.KSAPID, Content: model.search.SearchContent, }, function (resultData) {
+                            if (e.curr != model.page.pageindex) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: e.curr, pagecount: model.page.pagecount, P1: tempindex.KSAPID, Content: model.search.SearchContent, }, function (resultData) {
                                     if (resultData.ErrorMsg == "") {
-                                        model.CommonData = resultData.Result;
+                                        model.ListData = resultData.Result;
                                     }
                                 })
-                                model.page = e.curr;
+                                model.page.pageindex = e.curr;
                             }
                         }
                     });
@@ -71,8 +69,8 @@
             })
         },
         DFView: function (KSAPID, UserName) {
-            top.ComFunJS.winviewform("/ViewV4/AppPage/KSGL/USERKSDA.html?ID=" + KSAPID + "&&USER=" + UserName, "试卷", "1000", "");
-        }, 
+            top.ComFunJS.winviewform("/ViewV5/AppPage/KSGL/USERKSDA.html?ID=" + KSAPID + "&&USER=" + UserName, "试卷", "1000", "");
+        },
     })
 
 
