--- a/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
@@ -64,7 +64,7 @@
                             <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="发布"  ms-click="KSRELEASE(el)">
                                 <i class="iconfont icon-fabu"></i>
                             </a>
-                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName&&el.Status!=1" ms-click="DeleteView(el,$event)">
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.Status!=1" ms-click="DeleteView(el,$event)">
                                 <i class="iconfont icon-shanchu"></i>
                             </a>
                         </span>
