--- a/FTWeb/ViewV5/AppPage/KCGL/KJGL.html
+++ b/FTWeb/ViewV5/AppPage/KCGL/KJGL.html
@@ -1,20 +1,23 @@
 ﻿
 <div class="form-horizontal" ms-controller="KJZZ">
     <div style="margin: 0 80px;">
-        <div>
-            <div class="fg-item"><span>基本信息</span></div>
+        <div> 
             <ul class="clearfix" style="display: block;padding:0">
                 <li class="add-item add-widthall">
                     <label class="add-item-label"><i>*</i>课件文件类型</label>
                     <div class="add-ic">
-                        <div class="checkbox checkbox-success checkbox-inline  ">
-                            <input type="radio" id="inlineCheckbox1" name="kjzztype" ms-attr-checked="modelData.KJType==1" ms-click="ChangeKJtype(1)">
-                            <label for="inlineCheckbox1">视频 </label>
-                        </div>
-                        <div class="checkbox checkbox-success checkbox-inline " style="padding-left:0px;">
-                            <input type="radio" id="inlineCheckbox3" name="kjzztype" ms-attr-checked="modelData.KJType==2" ms-click="ChangeKJtype(2)">
-                            <label for="inlineCheckbox3">文档</label>
-                        </div>
+                        <div class="checkbox checkbox-inline"  ms-click="ChangeKJtype(1)" style="padding-left:0px">
+                            <div class="icheckbox_square-blue" ms-class-1="checked:modelData.KJType==1" id="inlineCheck1"> 
+                                <span class="iconfont icon-check ft12"></span>
+                            </div> 
+                            <label style="padding:0">视频 </label>
+                        </div> 
+                        <div class="checkbox checkbox-inline" ms-click="ChangeKJtype(2)" style="padding-left:0px">
+                            <div class="icheckbox_square-blue" ms-class-1="checked:modelData.KJType==2" id="inlineCheck2">
+                                <span class="iconfont icon-check ft12"></span>
+                            </div>
+                            <label style="padding:0">文档 </label>
+                        </div> 
                     </div>
                 </li>
                 <li class="add-item add-widthall">
@@ -40,44 +43,45 @@
         </div>
 
     </div>
-    <script>
-        var tempmodel = avalon.define({
-            $id: "KJZZ",
-            name: "课件制作",
-            iswf: true,//是否属于流程表单
-            FileData: {},
-            ChangeKJtype: function (type) {
-                tempmodel.modelData.KJType = type;
-            },
-            inittemp: function (strId) {
-                if (strId) {
-                    //编辑加载数据
-                    $.getJSON('/API/VIEWAPI.ashx?Action=KCGL_GETKJGLMODEL', { P1: strId }, function (resultData) {
-                         
-                        if (resultData.ErrorMsg == "") {
-                            tempmodel.modelData = resultData.Result;
-                            setTimeout(" ComFunJS.initForm()", 500);
-                        }
-                    })
-                } else {
-                    ComFunJS.initForm();
-                }
-            },//初始化
-            FolderName: "",
-            modelData: { "KJName": "", "KJDec": "", "KJType": 1, "KJZJR": "", "Files": "" },
-            SaveData: function (callback) {
+</div>
+<script>
+    var tempmodel = avalon.define({
+        $id: "KJZZ",
+        name: "课件制作",
+        iswf: true,//是否属于流程表单
+        FileData: {},
+        ChangeKJtype: function (type) {
+            tempmodel.modelData.KJType = type;
+        },
+        inittemp: function (strId) {
+            if (strId) {
+                //编辑加载数据
+                $.getJSON('/API/VIEWAPI.ashx?Action=KCGL_GETKJGLMODEL', { P1: strId }, function (resultData) {
 
-                $.post("/API/VIEWAPI.ashx?ACTION=KCGL_ADDKJGL", { P1: JSON.stringify(tempmodel.modelData.$model) }, function (result) {
-                    console.log(result);
-                    return callback.call(this, $.parseJSON(result));
-                });
+                    if (resultData.ErrorMsg == "") {
+                        tempmodel.modelData = resultData.Result;
+                        setTimeout(" ComFunJS.initForm()", 500);
+                    }
+                })
+            } else {
+                ComFunJS.initForm();
             }
-        });
+        },//初始化
+        FolderName: "",
+        modelData: { "KJName": "", "KJDec": "", "KJType": 1, "KJZJR": "", "Files": "" },
+        SaveData: function (callback) {
 
-        tempmodel.$watch("modelData.*", function (a, b) {
-            if (!tempmodel.modelData.ID) {
-                localStorage.setItem(pmodel.FormCode, JSON.stringify(tempmodel.modelData.$model));
-            }
-        })
-        //@ sourceURL=KCGL.js;
-    </script>
+            $.post("/API/VIEWAPI.ashx?ACTION=KCGL_ADDKJGL", { P1: JSON.stringify(tempmodel.modelData.$model) }, function (result) {
+                console.log(result);
+                return callback.call(this, $.parseJSON(result));
+            });
+        }
+    });
+
+    tempmodel.$watch("modelData.*", function (a, b) {
+        if (!tempmodel.modelData.ID) {
+            localStorage.setItem(pmodel.FormCode, JSON.stringify(tempmodel.modelData.$model));
+        }
+    })
+    //@ sourceURL=KCGL.js;
+</script>
