--- a/FTWeb/ViewV5/AppPage/KSGL/SJGLVIEW.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/SJGLVIEW.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <!-- 试题部分 -->
-                    <div class="exam-report-cont-blk f-f14" id="page-body" oncontextmenu="document.all?(window.event.returnValue=false):(event.preventDefault())" oncopy="return false" oncut="return false">
+                    <div class="f-f14" id="page-body" oncontextmenu="document.all?(window.event.returnValue=false):(event.preventDefault())" oncopy="return false" oncut="return false">
                         <div id="page-rules-1701454" ms-repeat-item="SJModelInfo.TXType">
                             <div class="m-secpart" id="page-rules-head-1701454">
                                 {{numberData[$index]}}、{{item.STType}}(共{{item.totalCount}}题<lable ms-if="item.STType=='单选题'">，每题1分。每题的备选项中，只有一个最符合题意</lable>)
