--- a/FTWeb/ViewV5/AppPage/KSGL/USERKS.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/USERKS.html
@@ -17,7 +17,7 @@
 <body>
     <style>
         .content {
-            width: 1000px;
+            width: 1020px;
             margin: 0 auto;
             font-family: "Microsoft YaHei", "SimSun", "u5b8bu4f5353";
             padding-bottom: 30px;
@@ -186,7 +186,7 @@
         })
     </script>
     <div>
-        <div class="container bg-default" style="min-width: 1000px;" ms-controller="KSPAGE">
+        <div class="container bg-default" style="min-width:1000px;" ms-controller="KSPAGE">
             <div class="content ">
                 <!-- 内容 部分 -->
                 <div class="exam-report  page_container" style="position:relative">
@@ -245,7 +245,7 @@
                     </div>
                     <!-- 试题部分 END -->
                     <!-- 答题右侧操作 -->
-                    <div class="exam-rightArea" id="page-right-frame" style="margin-left:730px;">
+                    <div class="exam-rightArea" id="page-right-frame">
                         <!--功能操作区域-->
                         <div class="rightArea-tool">
                             <div class="hd">
